# HopeFOAM

./: 2017-07-24-OpenFOAM workshop.pptx  Linux_Install_Guide  README.md
HopeFOAM-0.1/: AllwmakeDG
ThirdParty-0.1/: .gitignore  Allclean  makeGcc  (+10 more)
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/: CMakeLists.txt  module.cmake  visit_readers.xml
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/ANSYS/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/AUXFile/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/AvtAlgorithms/: CMakeLists.txt  vtkAvtFileFormatAlgorithm.cxx  vtkAvtFileFormatAlgorithm.h  vtkAvtMTMDFileFormatAlgorithm.cxx  vtkAvtMTMDFileFormatAlgorithm.h  vtkAvtMTSDFileFormatAlgorithm.cxx  vtkAvtMTSDFileFormatAlgorithm.h  vtkAvtSTMDFileFormatAlgorithm.cxx  vtkAvtSTMDFileFormatAlgorithm.h  vtkAvtSTSDFileFormatAlgorithm.cxx  vtkAvtSTSDFileFormatAlgorithm.h  vtkFileCloseSemiProperty.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/BOV/: CMakeLists.txt  avtBOVFileFormat.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/CEAucd/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/CGNS/: CMakeLists.txt  avtCGNSFileFormat.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/CMAT/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/CTRL/: CMakeLists.txt  avtCTRLFileFormat.C  avtCTRLFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Chombo/: CMakeLists.txt  avtChomboFileFormat.C  avtChomboFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Claw/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Common/: PolygonToTriangles.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Curve2D/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/DDCMD/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Dyna3D/: CMakeLists.txt  Dyna3DFile.cpp
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Enzo/: CMakeLists.txt  avtEnzoFileFormat.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/ExtrudedVol/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/FLASH/: CMakeLists.txt  avtFLASHFileFormat.C  avtFLASHFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Fluent/: CMakeLists.txt  avtFluentFileFormat.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/GGCM/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/GMV/: CMakeLists.txt  GMVPluginInfo.C  avtGMVFileFormat.C  gmvPolygonToTriangles.C  gmvread.c  gmvread.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/GTC/: CMakeLists.txt  avtGTCFileFormat.C  avtGTCFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/GULP/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Gadget/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/H5Nimrod/: CMakeLists.txt  H5utils.h  avtH5NimrodFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Image/: CMakeLists.txt  vtkStimulateReader.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/LAMMPS/: CMakeLists.txt  avtLAMMPSDumpFileFormat.C  avtLAMMPSDumpFileFormat.h  avtLAMMPSStructureFileFormat.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Lines/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/M3D/: CMakeLists.txt  avtM3DFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/M3DC1/: CMakeLists.txt  avtM3DC1FileFormat.C  avtM3DC1FileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/MFIX/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/MFIXCDF/: CMakeLists.txt  avtMFIXCDFFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/MM5/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Mili/: CMakeLists.txt  avtMiliFileFormat.C  avtMiliFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Miranda/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/NASTRAN/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/NETCDF/: CMakeLists.txt  NETCDFFileObject.C  ValidNETCDFFile.h  avtADAPTFileFormat.C  avtBasicNETCDFFileFormat.C  avtBasicNETCDFReader.C  avtCCSMReader.C  avtFVCOMParticleFileFormat.C  avtFVCOMReader.C  avtFVCOMReader.h  avtFVCOM_MTMDFileFormat.C  avtFVCOM_MTSDFileFormat.C  avtFVCOM_STSDFileFormat.C  avtLODIFileFormat.C  avtLODIParticleFileFormat.C  avtNETCDFReaderBase.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Nek5000/: CMakeLists.txt  avtNek5000FileFormat.C
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/OVERFLOW/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/OpenFOAM/: CMakeLists.txt  visit_vtkOpenFOAMReader.cxx  visit_vtkPOpenFOAMReader.cxx
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/PATRAN/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/PFLOTRAN/: CMakeLists.txt  avtPFLOTRANFileFormat.C  avtPFLOTRANFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/PLOT2D/: CMakeLists.txt
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/PLOT3D/: CMakeLists.txt  avtPLOT3DFileFormat.C  avtPLOT3DFileFormat.h
ThirdParty-0.1/ParaView-5.0.1/Utilities/VisItBridge/databases/Pixie/: CMakeLists.txt  avtPixieFileFormat.C  avtPixieFileFormat.h
(+573 files in other folders)
